--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddScheduleActivity">
-
-        </activity>
+        <activity android:name=".EditScheduleActivity"></activity>
+        <activity android:name=".AddScheduleActivity"></activity>
         <activity
             android:name=".DriverVerifyActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".RegisterActivity" />
         <activity
             android:name=".LoginActivity"
