--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,23 +14,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditProfileActivity"></activity>
-        <activity android:name=".CustomerBookingActivity" />
-        <activity android:name=".CustomerResultActivity" />
-        <activity android:name=".EditScheduleActivity" />
-        <activity android:name=".AddScheduleActivity" />
-        <activity
-            android:name=".DriverVerifyActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".RegisterActivity" />
-        <activity
-            android:name=".LoginActivity"
+        <activity android:name=".SplashScreenActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".EditProfileActivity" />
+        <activity android:name=".CustomerBookingActivity" />
+        <activity android:name=".CustomerResultActivity" />
+        <activity android:name=".EditScheduleActivity" />
+        <activity android:name=".AddScheduleActivity" />
+        <activity
+            android:name=".DriverVerifyActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".RegisterActivity" />
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+
         </activity>
         <activity
             android:name=".MainActivity"
